backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-imdb-backend-service
spec:
  selector:
    app: search-imdb-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
