backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-imdb-backend-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: k8s.imdbsearch.space
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name:  search-imdb-backend-service
                port:
                  number: 80
